src/main/java/it/cnr/istc/pst/platinum/ai/lang/ddl/v3/parser/ddl3Parser.java
package it.cnr.istc.pst.platinum.ai.lang.ddl.v3.parser;

// $ANTLR 3.5 /Users/alessandroumbrico/Desktop/ddl3.g 2013-11-05 15:47:18

import java.util.HashMap;

import org.antlr.runtime.BaseRecognizer;
import org.antlr.runtime.BitSet;
import org.antlr.runtime.DFA;
import org.antlr.runtime.EarlyExitException;
import org.antlr.runtime.IntStream;
import org.antlr.runtime.MismatchedSetException;
import org.antlr.runtime.NoViableAltException;
import org.antlr.runtime.Parser;
import org.antlr.runtime.ParserRuleReturnScope;
import org.antlr.runtime.RecognitionException;
import org.antlr.runtime.RecognizerSharedState;
import org.antlr.runtime.Token;
import org.antlr.runtime.TokenStream;
import org.antlr.runtime.tree.CommonTreeAdaptor;
import org.antlr.runtime.tree.RewriteEarlyExitException;
import org.antlr.runtime.tree.RewriteRuleSubtreeStream;
import org.antlr.runtime.tree.RewriteRuleTokenStream;
import org.antlr.runtime.tree.TreeAdaptor;


@SuppressWarnings("all")
public class ddl3Parser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMMENT", "ID", "INT", "VarID", 
		"WS", "'!'", "'!='", "'('", "')'", "'*'", "'+'", "','", "'-'", "'.'", 
		"':'", "';'", "'<'", "'<='", "'='", "'>'", "'>='", "'?'", "'AFTER'", "'AFTER-END'", 
		"'AT'", "'AT-END'", "'AT-START'", "'BEFORE'", "'BEFORE-START'", "'BOUNDED'", 
		"'COMPONENT'", "'COMP_TYPE'", "'CONSUMPTION'", "'CONTAINS'", "'CONTAINS-END'", 
		"'CONTAINS-START'", "'ConsumableResource'", "'DOMAIN'", "'DURING'", "'END-END'", 
		"'END-START'", "'ENDS-AT'", "'ENDS-DURING'", "'EQUALS'", "'ESTA_LIGHT'", 
		"'ESTA_LIGHT_MAX_CONSUMPTION'", "'EnumerationParameterType'", "'FINISHED-BY'", 
		"'FINISHES'", "'FLEXIBLE'", "'INF'", "'MEETS'", "'MET-BY'", "'NumericParameterType'", 
		"'OVERLAPPED-BY'", "'OVERLAPS'", "'PAR_TYPE'", "'PROBLEM'", "'PRODUCTION'", 
		"'REQUIREMENT'", "'RenewableResource'", "'START-END'", "'START-START'", 
		"'STARTED-BY'", "'STARTS'", "'STARTS-AT'", "'STARTS-DURING'", "'SYNCHRONIZE'", 
		"'SimpleGroundStateVariable'", "'SingletonStateVariable'", "'TEMPORAL_MODULE'", 
		"'VALUE'", "'['", "']'", "'{'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__9=9;
	public static final int T__10=10;
	public static final int T__11=11;
	public static final int T__12=12;
	public static final int T__13=13;
	public static final int T__14=14;
	public static final int T__15=15;
	public static final int T__16=16;
	public static final int T__17=17;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int T__52=52;
	public static final int T__53=53;
	public static final int T__54=54;
	public static final int T__55=55;
	public static final int T__56=56;
	public static final int T__57=57;
	public static final int T__58=58;
	public static final int T__59=59;
	public static final int T__60=60;
	public static final int T__61=61;
	public static final int T__62=62;
	public static final int T__63=63;
	public static final int T__64=64;
	public static final int T__65=65;
	public static final int T__66=66;
	public static final int T__67=67;
	public static final int T__68=68;
	public static final int T__69=69;
	public static final int T__70=70;
	public static final int T__71=71;
	public static final int T__72=72;
	public static final int T__73=73;
	public static final int T__74=74;
	public static final int T__75=75;
	public static final int T__76=76;
	public static final int T__77=77;
	public static final int T__78=78;
	public static final int T__79=79;
	public static final int COMMENT=4;
	public static final int ID=5;
	public static final int INT=6;
	public static final int VarID=7;
	public static final int WS=8;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public ddl3Parser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public ddl3Parser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
		this.state.ruleMemo = new HashMap[162+1];


	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return ddl3Parser.tokenNames; }
	@Override public String getGrammarFileName() { return "/Users/alessandroumbrico/Desktop/ddl3.g"; }


	public static class ddl_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};

	// $ANTLR start "ddl"
	// /Users/alessandroumbrico/Desktop/ddl3.g:9:1: ddl : ( domain ( problem )? -> ^( 'DOMAIN' domain ( problem )? ) | problem -> ^( 'PROBLEM' problem ) );
	public final ddl3Parser.ddl_return ddl() throws RecognitionException {
		ddl3Parser.ddl_return retval = new ddl3Parser.ddl_return();
		retval.start = input.LT(1);
		int ddl_StartIndex = input.index();

		Object root_0 = null;

		ParserRuleReturnScope domain1 =null;
		ParserRuleReturnScope problem2 =null;
		ParserRuleReturnScope problem3 =null;

		RewriteRuleSubtreeStream stream_domain=new RewriteRuleSubtreeStream(adaptor,"rule domain");
		RewriteRuleSubtreeStream stream_problem=new RewriteRuleSubtreeStream(adaptor,"rule problem");

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return retval; }

			// /Users/alessandroumbrico/Desktop/ddl3.g:9:5: ( domain ( problem )? -> ^( 'DOMAIN' domain ( problem )? ) | problem -> ^( 'PROBLEM' problem ) )
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==41) ) {
				alt2=1;
			}
			else if ( (LA2_0==61) ) {
				alt2=2;
			}

			else {
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}

			switch (alt2) {
				case 1 :
					// /Users/alessandroumbrico/Desktop/ddl3.g:9:7: domain ( problem )?
					{
					pushFollow(FOLLOW_domain_in_ddl42);
					domain1=domain();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_domain.add(domain1.getTree());
					// /Users/alessandroumbrico/Desktop/ddl3.g:9:14: ( problem )?
					int alt1=2;
					int LA1_0 = input.LA(1);
					if ( (LA1_0==61) ) {
						alt1=1;
					}
					switch (alt1) {
						case 1 :
							// /Users/alessandroumbrico/Desktop/ddl3.g:9:15: problem
							{
							pushFollow(FOLLOW_problem_in_ddl45);
							problem2=problem();
							state._fsp--;
							if (state.failed) return retval;
							if ( state.backtracking==0 ) stream_problem.add(problem2.getTree());
							}
							break;

					}

					// AST REWRITE
					// elements: domain, problem, 41
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					if ( state.backtracking==0 ) {
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (Object)adaptor.nil();
					// 9:25: -> ^( 'DOMAIN' domain ( problem )? )
					{
						// /Users/alessandroumbrico/Desktop/ddl3.g:9:27: ^( 'DOMAIN' domain ( problem )? )
						{
						Object root_1 = (Object)adaptor.nil();
						root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(41, "41"), root_1);
						adaptor.addChild(root_1, stream_domain.nextTree());
						// /Users/alessandroumbrico/Desktop/ddl3.g:9:45: ( problem )?
						if ( stream_problem.hasNext() ) {
							adaptor.addChild(root_1, stream_problem.nextTree());
						}
						stream_problem.reset();

						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;
					}

					}
					break;
				case 2 :
					// /Users/alessandroumbrico/Desktop/ddl3.g:9:59: problem
					{
					pushFollow(FOLLOW_problem_in_ddl63);
					problem3=problem();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_problem.add(problem3.getTree());
					// AST REWRITE
					// elements: 61, problem
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					if ( state.backtracking==0 ) {
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (Object)adaptor.nil();
					// 9:67: -> ^( 'PROBLEM' problem )
					{
						// /Users/alessandroumbrico/Desktop/ddl3.g:9:69: ^( 'PROBLEM' problem )
						{
						Object root_1 = (Object)adaptor.nil();
						root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(61, "61"), root_1);
						adaptor.addChild(root_1, stream_problem.nextTree());
						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;
					}

					}
					break;

			}
			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 1, ddl_StartIndex); }

		}
		return retval;
	}
	// $ANTLR end "ddl"


	public static class domain_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "domain"
	// /Users/alessandroumbrico/Desktop/ddl3.g:11:1: domain : 'DOMAIN' ID '{' temporal_module ( domain_element )* '}' -> ^( ID temporal_module ( domain_element )* ) ;
	public final ddl3Parser.domain_return domain() throws RecognitionException  {
		ddl3Parser.domain_return retval = new ddl3Parser.domain_return();
		retval.start = input.LT(1);
		int domain_StartIndex = input.index();

		Object root_0 = null;

		Token string_literal4=null;
		Token ID5=null;
		Token char_literal6=null;
		Token char_literal9=null;
		ParserRuleReturnScope temporal_module7 =null;
		ParserRuleReturnScope domain_element8 =null;

		Object string_literal4_tree=null;
		Object ID5_tree=null;
		Object char_literal6_tree=null;
		Object char_literal9_tree=null;
		RewriteRuleTokenStream stream_79=new RewriteRuleTokenStream(adaptor,"token 79");
		RewriteRuleTokenStream stream_78=new RewriteRuleTokenStream(adaptor,"token 78");
		RewriteRuleTokenStream stream_41=new RewriteRuleTokenStream(adaptor,"token 41");
		RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
		RewriteRuleSubtreeStream stream_temporal_module=new RewriteRuleSubtreeStream(adaptor,"rule temporal_module");
		RewriteRuleSubtreeStream stream_domain_element=new RewriteRuleSubtreeStream(adaptor,"rule domain_element");

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return retval; }

			// /Users/alessandroumbrico/Desktop/ddl3.g:12:2: ( 'DOMAIN' ID '{' temporal_module ( domain_element )* '}' -> ^( ID temporal_module ( domain_element )* ) )
			// /Users/alessandroumbrico/Desktop/ddl3.g:12:4: 'DOMAIN' ID '{' temporal_module ( domain_element )* '}'
			{
			string_literal4=(Token)match(input,41,FOLLOW_41_in_domain80); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_41.add(string_literal4);

			ID5=(Token)match(input,ID,FOLLOW_ID_in_domain82); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_ID.add(ID5);

			char_literal6=(Token)match(input,78,FOLLOW_78_in_domain84); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_78.add(char_literal6);

			pushFollow(FOLLOW_temporal_module_in_domain86);
			temporal_module7=temporal_module();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) stream_temporal_module.add(temporal_module7.getTree());
			// /Users/alessandroumbrico/Desktop/ddl3.g:12:36: ( domain_element )*
			loop3:
			while (true) {
				int alt3=2;
				int LA3_0 = input.LA(1);
				if ( ((LA3_0 >= 34 && LA3_0 <= 35)||LA3_0==60||LA3_0==71) ) {
					alt3=1;
				}

				switch (alt3) {
				case 1 :
					// /Users/alessandroumbrico/Desktop/ddl3.g:12:36: domain_element
					{
					pushFollow(FOLLOW_domain_element_in_domain88);
					domain_element8=domain_element();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_domain_element.add(domain_element8.getTree());
					}
					break;

				default :
					break loop3;
				}
			}

			char_literal9=(Token)match(input,79,FOLLOW_79_in_domain91); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_79.add(char_literal9);

			// AST REWRITE
			// elements: ID, temporal_module, domain_element
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if ( state.backtracking==0 ) {
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 12:56: -> ^( ID temporal_module ( domain_element )* )
			{
				// /Users/alessandroumbrico/Desktop/ddl3.g:12:58: ^( ID temporal_module ( domain_element )* )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot(new DDLDomain(stream_ID.nextToken()), root_1);
				adaptor.addChild(root_1, stream_temporal_module.nextTree());
				// /Users/alessandroumbrico/Desktop/ddl3.g:12:90: ( domain_element )*
				while ( stream_domain_element.hasNext() ) {
					adaptor.addChild(root_1, stream_domain_element.nextTree());
				}
				stream_domain_element.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 2, domain_StartIndex); }

		}
		return retval;
	}
	// $ANTLR end "domain"


	public static class temporal_module_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "temporal_module"
	// /Users/alessandroumbrico/Desktop/ddl3.g:14:1: temporal_module : 'TEMPORAL_MODULE' ID '=' range ',' INT ';' -> ^( ID range INT ) ;
	public final ddl3Parser.temporal_module_return temporal_module() throws RecognitionException  {
		ddl3Parser.temporal_module_return retval = new ddl3Parser.temporal_module_return();
		retval.start = input.LT(1);
		int temporal_module_StartIndex = input.index();

		Object root_0 = null;

		Token string_literal10=null;
		Token ID11=null;
		Token char_literal12=null;
		Token char_literal14=null;
		Token INT15=null;
		Token char_literal16=null;
		ParserRuleReturnScope range13 =null;

		Object string_literal10_tree=null;
		Object ID11_tree=null;
		Object char_literal12_tree=null;
		Object char_literal14_tree=null;
		Object INT15_tree=null;
		Object char_literal16_tree=null;
		RewriteRuleTokenStream stream_INT=new RewriteRuleTokenStream(adaptor,"token INT");
		RewriteRuleTokenStream stream_19=new RewriteRuleTokenStream(adaptor,"token 19");
		RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
		RewriteRuleTokenStream stream_22=new RewriteRuleTokenStream(adaptor,"token 22");
		RewriteRuleTokenStream stream_15=new RewriteRuleTokenStream(adaptor,"token 15");
		RewriteRuleTokenStream stream_74=new RewriteRuleTokenStream(adaptor,"token 74");
		RewriteRuleSubtreeStream stream_range=new RewriteRuleSubtreeStream(adaptor,"rule range");

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return retval; }

			// /Users/alessandroumbrico/Desktop/ddl3.g:15:2: ( 'TEMPORAL_MODULE' ID '=' range ',' INT ';' -> ^( ID range INT ) )
			// /Users/alessandroumbrico/Desktop/ddl3.g:15:4: 'TEMPORAL_MODULE' ID '=' range ',' INT ';'
			{
			string_literal10=(Token)match(input,74,FOLLOW_74_in_temporal_module113); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_74.add(string_literal10);

			ID11=(Token)match(input,ID,FOLLOW_ID_in_temporal_module115); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_ID.add(ID11);

			char_literal12=(Token)match(input,22,FOLLOW_22_in_temporal_module117); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_22.add(char_literal12);

			pushFollow(FOLLOW_range_in_temporal_module119);
			range13=range();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) stream_range.add(range13.getTree());
			char_literal14=(Token)match(input,15,FOLLOW_15_in_temporal_module121); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_15.add(char_literal14);

			INT15=(Token)match(input,INT,FOLLOW_INT_in_temporal_module123); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_INT.add(INT15);

			char_literal16=(Token)match(input,19,FOLLOW_19_in_temporal_module125); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_19.add(char_literal16);

			// AST REWRITE
			// elements: ID, range, INT
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if ( state.backtracking==0 ) {
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 15:47: -> ^( ID range INT )
			{
				// /Users/alessandroumbrico/Desktop/ddl3.g:15:49: ^( ID range INT )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot(new DDLTemporalModule(stream_ID.nextToken()), root_1);
				adaptor.addChild(root_1, stream_range.nextTree());
				adaptor.addChild(root_1, stream_INT.nextNode());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;
			}

			}

			retval.stop = input.LT(-1);
